--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,18 @@
-name: CD – Deploy MobyPark
+name: Deploy
 
 on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["Python Tests"]   # must match Workflow A's `name:`
+    types:
+      - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: self-hosted
-
     steps:
+      - run: echo "Deploying because CI passed"
+      
       - name: Checkout code
         uses: actions/checkout@v4
 
