--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,4 @@ __marimo__/
 # Streamlit
 .streamlit/secrets.toml
 MobyPark-api-data/pdata/MobyParkData.db
+MobyPark-api-data/pdata/MobyParkData.db
