--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,4 @@ __marimo__/
 .streamlit/secrets.toml
 MobyPark-api-data/pdata/MobyParkData.db
 MobyPark-api-data/pdata/MobyParkData.db
+MobyPark-api-data/pdata/MobyParkData.db
