--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,5 @@ __marimo__/
 MobyPark-api-data/pdata/MobyParkData.db
 MobyPark-api-data/pdata/MobyParkData.db
 MobyPark-api-data/pdata/MobyParkData.db
+MobyPark-api-data/pdata/MobyParkData.db
+test_data/MobyParkData.db
