--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,4 @@ MobyPark-api-data/pdata/MobyParkData.db
 MobyPark-api-data/pdata/MobyParkData.db
 MobyPark-api-data/pdata/MobyParkData.db
 test_data/MobyParkData.db
+MobyPark-api-data/pdata/MobyParkData.db
