--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   workflow_run:
-    workflows: ["Python Tests"]   # must match Workflow A's `name:`
+    workflows: ["Python Tests"]
     types:
       - completed
 
@@ -31,3 +31,5 @@ jobs:
           sudo -n /usr/bin/systemctl daemon-reload
           sudo -n /usr/bin/systemctl restart mobypark
           sudo -n /usr/bin/systemctl status mobypark 
+
+# aa
