--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,4 @@ MobyPark-api-data/pdata/MobyParkData.db
 MobyPark-api-data/pdata/MobyParkData.db
 test_data/MobyParkData.db
 MobyPark-api-data/pdata/MobyParkData.db
+/MobyPark-api-data
