--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
     labels:
       - "dependencies"
       - "python"
@@ -15,4 +15,4 @@ updates:
     rebase-strategy: "auto"
     ignore:
       - dependency-name: "*test*"
-        versions: ["> 0"]
+        update-types: ["version-update:semver-major"]
