--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,4 @@ test_data/MobyParkData.db
 MobyPark-api-data/pdata/MobyParkData.db
 /MobyPark-api-data
 MobyPark-api-data/pdata/MobyParkData.db
+/MobyPark-api-data
